# G1_sentinel-sre

./: .gitignore  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.py
server/: Dockerfile  app.py  environment.py
